@@ -18,6 +18,7 @@
   [Bug Fix]
     * Fix STACK_OF memory bugs.
     * Fix a memory bug of Net::SSLeay::X509_STORE_CTX#get_current_cert method.
+    * Fix the type of 1th argument of Net::SSLeay::X509_STORE_CTX#get1_issuer method.
   [Incompatibe Changes]
     * Remove Net::SSLeay::Net::SSLeay::X509_STORE_CTX#Init method.
 0.023 2024-12-06
